style/index.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

:root {
    font-size: 16px;
    --skill-bar-color: #000;
}

body {
    font-family: "Radian", sans-serif;
    background-color: #fff;
    color: #000;
    transition: background 200ms ease-in-out,
        color 200ms ease-in-out;
    background-color: #fff;
    color: #000;
}

body.dark-mode {
    background-color: #070707;
    --skill-bar-color: #fff;
    color: #fff;
}

ul {
    list-style: none;
}

a, img, svg {
    display: block;
}

a {
    color: #000;
    text-decoration: none;
}

body.dark-mode a {
    color: #fff;
}

img {
    object-fit: cover;
}

button {
    border: 1px solid #000;
}

body.dark-mode button {
    border: 1px solid #fff;
}

h1 {
    font-family: "Radian Bold", sans-serif;
}

.container--fixed {
    position: absolute;
    top: 0;
    left: 0;
}

.container--whole {
    width: 100%;
    height: 100vh;
}

#site-navigation-desktop {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100px;
    z-index: 2;
}

#navigation-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 80%;
    max-width: 1300px;
    height: 100%;
}

#socials-container {
    width: 125px;
}

#socials-container ul {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
}

#socials-container ul:hover li a svg:not(:hover) {
    opacity: 0.25;
}

#socials-container ul li a svg {
    width: 1.5625rem;
    height: 1.5625rem;
    transition: opacity 200ms ease-in-out;
}

#navigation-links {
    width: 50%;
}

#navigation-links ul {
    display: flex;
    justify-content: space-between;
}

#navigation-links ul li a {
    font-size: 1.125rem;
    text-transform: uppercase;
    letter-spacing: 0.125rem;
    padding: 10px 20px;
    transition: opacity 200ms ease-in-out;
}

#navigation-links ul li a:not(#link--contact):not(.current-tab):hover {
    opacity: 0.25;
}

#navigation-links ul li a.current-tab {
    opacity: 0.5;
}

#navigation-links ul li a#link--contact {
    border-radius: 50px;
    background-color: #000;
    color: #fff;
}

body.dark-mode #navigation-links ul li a#link--contact {
    background-color: #fff;
    color: #000;
}

#portfolio-intro-content {
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 1;
}

#portfolio-content {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    width: 50%;
    max-width: 750px;
    height: 600px;
}

#intro-name-container {
    width: 100%;
    /* margin-bottom: 0px; */
}

#intro-name-container p {
    font-family: "Radian Light", sans-serif;
    font-size: 2.5rem;
    text-transform: uppercase;
    text-align: right;
    margin-right: 100px;
}

#intro-name-container h1 {
    font-size: 8.5rem;
    line-height: 7.5rem;
    text-transform: uppercase;
}

#intro-name-container h1[name-align="right"] {
    text-align: right;
}

#portfolio-content #intro-objective-message {
    font-family: "Radian Extra Light", sans-serif;
    font-size: 2rem;
    text-align: center;
}

#intro-ctas-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
}

#intro-ctas-container button {
    border-radius: 50px;
    font-size: 2rem;
    text-transform: uppercase;
    width: 47.5%;
    padding: 1.25rem 0;
    cursor: pointer;
}

#intro-ctas-container button#cta--work {
    background-color: transparent;
}

#intro-ctas-container button#cta--work {
    color: #000;
}

body.dark-mode #intro-ctas-container button#cta--work {
    color: #fff;
}

#intro-ctas-container button#cta--contact {
    background-color: #000;
    color: #fff;
}

body.dark-mode #intro-ctas-container button#cta--contact {
    background-color: #fff;
    color: #000;
}

#keyboard-graphic-container {
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: -1;
}

#keyboard-container {
    width: 75%;
}

#keyboard-container svg {
    width: 100%;
    opacity: 0.1;
}

body.dark-mode #keyboard-container svg {
    opacity: 0.25;
}

#keyboard-container svg g g path {
    stroke: #000;
}

#keyboard-container svg g g path:not(.lit-key) {
    fill: #f9f9f9;
}

body.dark-mode #keyboard-container svg g g path {
    stroke: #fff;
}

body.dark-mode #keyboard-container svg g g path:not(.lit-key) {
    fill: transparent;
}

body.dark-mode #keyboard-container svg g g rect {
    stroke: #fff;
}

body.dark-mode #keyboard-container svg g g g line {
    stroke: #fff;
}

.lit-key {
    fill: #FF0000;
}

#main-site-content-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    /* top: calc(100vh + 1.75rem); */
    top: 100vh;
    width: 100%;
}

.site-content-container {
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
    width: 90%;
}

.site-section {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    border: 1px solid #000;
    border-radius: 50px;
    flex-basis: 47.5%;
    /* min-height: 660px; */
}

body.dark-mode .site-section {
    border: 1px solid #fff;
}

.site-section .site-section-inner {
    width: 90%;
    min-height: 560px;
    margin: 20px 0;
}

.site-content-container h1.header--center {
    text-align: center;
}

.site-content-container h1.site-header {
    font-size: 4.5rem;
    line-height: 4.5rem;
    text-transform: uppercase;
    margin: 60px 0;
}

.site-content-container h1.section-header {
    font-size: 3.5rem;
    line-height: 3.5rem;
    text-transform: uppercase;
    transform: translateY(-50%);
    transition: background 200ms ease-in-out;
}

.site-content-container h1 span {
    background-color: #fff;
    padding: 0 75px;
}

body.dark-mode .site-content-container h1 span {
    background-color: #070707;
}

.site-content-container h1.subsection-header {
    font-size: 2.5rem;
    line-height: 2.5rem;
    text-transform: uppercase;
    margin-bottom: 25px;
}

#campus-description-container img {
    width: 250px;
    margin-right: 25px;
}

#campus-description-container {
    display: flex;
    align-items: flex-start;
    font-size: 1.5rem;
}

#intro-container {
    margin-top: 60px;
}

#intro-container p {
    margin-bottom: 10px;
    font-size: 1.25rem;
}

#dev-exp-container {
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
}

#web-dev-exp-container {
    flex-basis: 45%;
}

.exp-container {
    display: flex;
    justify-content: center;
    margin-bottom: 10px;
}

.exp-container p {
    font-size: 1.25rem;
    flex-basis: 50%;
}

.exp-gauge-container {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-basis: 50%;
}

.exp-gauge-container .exp-gauge-content {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 75%;
}

.exp-gauge-container .exp-gauge-content svg {
    width: 15px;
    height: 15px;
}

.exp-gauge-container .exp-gauge-content svg:not(.skill-met) circle {
    fill: transparent;
    stroke: #000;
    stroke-width: 2px;
}

body.dark-mode .exp-gauge-container .exp-gauge-content svg:not(.skill-met) circle {
    stroke: #fff;
}

.exp-gauge-container .exp-gauge-content svg.skill-met circle {
    fill: #000;
}

body.dark-mode .exp-gauge-container .exp-gauge-content svg.skill-met circle {
    fill: #fff;
}

#software-dev-exp-container {
    flex-basis: 45%;
}

#skills-container {
    margin-top: 25px;
}

.skills-gauge-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    margin-bottom: 10px;
}

.skills-gauge-container p {
    font-size: 1.25rem;
    flex-basis: 50%;
}

.skills-gauge-container span.progress-span {
    flex-basis: 50%;
    height: 6px;
    /* background: linear-gradient(to right, #000 50%, transparent 50%); */
    border: 1px solid #000;
}

body.dark-mode .skills-gauge-container span.progress-span {
    border: 1px solid #fff;
}

@font-face {
    src: url("/assets/fonts/Radian/Radian.ttf");
    font-family: "Radian";
}

@font-face {
    src: url("/assets/fonts/Radian/Radian Light.ttf");
    font-family: "Radian Light";
}

@font-face {
    src: url("/assets/fonts/Radian/Radian ExtraLight.ttf");
    font-family: "Radian Extra Light";
}

@font-face {
    src: url("/assets/fonts/Radian/Radian Bold.ttf");
    font-family: "Radian Bold";
}

/* Initial media query for refactoring on desktop */
@media screen and (max-width: 1366px) {
    :root {
        font-size: 14px;
    }

    #site-navigation-desktop {
        height: 75px;
    }

    #portfolio-content {
        transform: translateY(15px);
        height: 500px;
    }
}

